<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/car"
    tools:context=".Activity.Acitivity_Choose_SignIn_Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jose_san_bold"
                    android:letterSpacing="0.05"
                    android:text="@string/welcome_to_hurry_ndriver"
                    android:textColor="@color/black"
                    android:textSize="32sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/signin_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="4dp"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/btn_red_tint"
                        android:text="@string/sign_in_btn"/>

                    <Button
                        android:id="@+id/signUP_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/white"
                        android:background="@drawable/btn_red_back"
                        android:text="@string/registerBtn"/>
                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>