<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.signUpAcitivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/jose_san_bold"
                android:text="@string/let_s_start_with_creating_nyour_account"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:textColorHint="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_fname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/draweble_user"
                            android:drawablePadding="8dp"
                            android:drawableTint="@color/colorAccent"
                            android:fontFamily="@font/jose_san_bold"
                            android:hint="@string/first_name"
                            android:padding="12dp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:textColorHint="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_lname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/draweble_user"
                            android:drawablePadding="8dp"
                            android:drawableTint="@color/colorAccent"
                            android:fontFamily="@font/jose_san_bold"
                            android:hint="@string/last_name"
                            android:padding="12dp" />


                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:textColorHint="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/email_icon"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/colorAccent"
                        android:fontFamily="@font/jose_san_bold"
                        android:hint="@string/email"
                        android:padding="12dp" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:textColorHint="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_phoneNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/phone_icon"
                        android:drawablePadding="8dp"
                        android:clickable="false"
                        android:focusable="false"
                        android:drawableTint="@color/colorAccent"
                        android:fontFamily="@font/jose_san_bold"
                        android:hint="@string/phone_number"
                        android:padding="12dp" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:textColorHint="@color/colorAccent"
                    android:visibility="gone"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/colorAccent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="12dp" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:textColorHint="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cityName"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/phone_icon"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/colorAccent"
                        android:fontFamily="@font/jose_san_bold"
                        android:hint="@string/city_name"
                        android:padding="12dp" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:textColorHint="@color/colorAccent"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/invitation_icon"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/colorAccent"
                        android:hint="Invite Code "
                        android:padding="12dp" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:textColorHint="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/carLicName"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/phone_icon"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/colorAccent"
                        android:fontFamily="@font/jose_san_bold"
                        android:hint="@string/vehicle_license_number"
                        android:padding="12dp" />


                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/termCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/jose_san_bold"
                    android:linksClickable="true"
                    android:text="@string/agree_terms_privacy"
                    android:textColor="@color/colorAccent"
                    android:textColorLink="#0D47A1" />


                <Button
                    android:id="@+id/continueBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/login_btn_background"
                    android:fontFamily="@font/benson_bagla_font"
                    android:text="@string/continuetext"
                    android:textAllCaps="true"
                    android:textColor="#fff" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>